Updated lab instructors and images.

--- a/Labs/Lab1/Lab1.ipynb
+++ b/Labs/Lab1/Lab1.ipynb
@@ -11,7 +11,8 @@
     "\n",
     "**Harvard University**<br>\n",
     "**Summer 2018**<br>\n",
-    "**Instructors:** Pavlos Protopapas and Kevin Rader\n",
+    "**Instructors:** Pavlos Protopapas and Kevin Rader <br>\n",
+    "**Lab Instructors:** David Sondak and Will Claybaugh\n",
     "\n",
     "---"
    ]
@@ -51,7 +52,6 @@
     "  <li> Working with `Python` </li>\n",
     "    <ol>\n",
     "        <li> functions, modules, and libraries </li>\n",
-    "        <li> Document Object Model (DOM) </li>\n",
     "    </ol>\n",
     "  <li> `pandas` </li>\n",
     "  <li> Regular Expressions  </li>\n",
