Fixed small typo in coding cell.

--- a/Labs/Lab1/Lab1.ipynb
+++ b/Labs/Lab1/Lab1.ipynb
@@ -648,9 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "lower_words = [word.lower() for word in more_words]\n",
-    "lower_words.count(\"dogs\")"
+    "# Your code here"
    ]
   },
   {
