--- a/Homework/HW0/cs109a_hw0_final.ipynb
+++ b/Homework/HW0/cs109a_hw0_final.ipynb
@@ -152,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1030,6 +1032,7 @@
    "execution_count": 5,
    "metadata": {
     "button": false,
+    "collapsed": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1070,6 +1073,7 @@
    "execution_count": 6,
    "metadata": {
     "button": false,
+    "collapsed": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1097,6 +1101,7 @@
    "execution_count": 7,
    "metadata": {
     "button": false,
+    "collapsed": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1139,6 +1144,7 @@
    "execution_count": 8,
    "metadata": {
     "button": false,
+    "collapsed": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1425,7 +1431,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1497,7 +1505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
