--- a/Lectures/Lecture2/grammarofdata.ipynb
+++ b/Lectures/Lecture2/grammarofdata.ipynb
@@ -11,7 +11,8 @@
     "# <img style=\"float: left; padding-right: 10px; width: 45px\" src=\"iacs.png\"> S-109A Introduction to Data Science \n",
     "\n",
     "\n",
-    "## Lecture2, Notebook: EDA, Pandas, and the Grammar of Data\n",
+    "## Lecture2, Notebook:  Pandas, and the Grammar of Data\n",
+    "(created with Rahul Dave for cs109)\n",
     "\n",
     "**Harvard University**<br>\n",
     "**Summer 2018**<br>\n",
@@ -19,35 +20,6 @@
     "\n",
     "\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>div.exercise { background-color: #ffcccc;border-color: #E9967A; border-left: 5px solid #800080; padding: 0.5em;}</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import HTML\n",
-    "style = \"<style>div.exercise { background-color: #ffcccc;border-color: #E9967A; border-left: 5px solid #800080; padding: 0.5em;}</style>\"\n",
-    "HTML(style)"
    ]
   },
   {
