Added polling links.  Not active yet.

--- a/Labs/Lab1/Lab1.ipynb
+++ b/Labs/Lab1/Lab1.ipynb
@@ -621,6 +621,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Take this poll when you're done](https://PollEv.com/clickable_images/inthQ5a2DyUySSL/web)\n",
+    "\n",
+    "**Poll Instructions**\n",
+    "* When your group has completed the exercise or the staff announces that time's up, pleaes take the poll.\n",
+    "* One click per group, please!\n",
+    "* The $x$-axis denotes *Completeness* and the $y$-axis denotes *Confidence*.\n",
+    "* Examples:\n",
+    "  * you completely finished the exercise and are confident that you did it correctly --- click in the upper right zone.\n",
+    "  * You didn't finish the exercise, but you're confident that you know how to do it correctly --- click in the upper left zone\n",
+    "  * You finished the exercise, but you're not confident in your solution --- click in the lower right zone\n",
+    "  * You didn't finish the exercise and aren't sure how to proceed --- click in the lower left zone\n",
+    "* **Note:** Do not click near the boundaries of a zone.  Your response won't register."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Still, we have more work to do.  Only $2$ occurrances of the word `dogs` were noted.  The other occurance happens with a capital letter.  Not to fear!  We can convert strings to lower case using the `lower` method."
    ]
   },
@@ -655,7 +673,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Poll everywhere link]"
+    "[Take this poll when you're done](https://PollEv.com/clickable_images/inthQ5a2DyUySSL/web)\n",
+    "\n",
+    "**Poll Instructions**\n",
+    "* When your group has completed the exercise or the staff announces that time's up, pleaes take the poll.\n",
+    "* One click per group, please!\n",
+    "* The $x$-axis denotes *Completeness* and the $y$-axis denotes *Confidence*.\n",
+    "* Examples:\n",
+    "  * you completely finished the exercise and are confident that you did it correctly --- click in the upper right zone.\n",
+    "  * You didn't finish the exercise, but you're confident that you know how to do it correctly --- click in the upper left zone\n",
+    "  * You finished the exercise, but you're not confident in your solution --- click in the lower right zone\n",
+    "  * You didn't finish the exercise and aren't sure how to proceed --- click in the lower left zone\n",
+    "* **Note:** Do not click near the boundaries of a zone.  Your response won't register.re link]"
    ]
   },
   {
@@ -693,7 +722,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Poll everywhere link]"
+    "[Take this poll when you're done](https://PollEv.com/clickable_images/inthQ5a2DyUySSL/web)\n",
+    "\n",
+    "**Poll Instructions**\n",
+    "* When your group has completed the exercise or the staff announces that time's up, pleaes take the poll.\n",
+    "* One click per group, please!\n",
+    "* The $x$-axis denotes *Completeness* and the $y$-axis denotes *Confidence*.\n",
+    "* Examples:\n",
+    "  * you completely finished the exercise and are confident that you did it correctly --- click in the upper right zone.\n",
+    "  * You didn't finish the exercise, but you're confident that you know how to do it correctly --- click in the upper left zone\n",
+    "  * You finished the exercise, but you're not confident in your solution --- click in the lower right zone\n",
+    "  * You didn't finish the exercise and aren't sure how to proceed --- click in the lower left zone\n",
+    "* **Note:** Do not click near the boundaries of a zone.  Your response won't register."
    ]
   },
   {
@@ -1181,7 +1221,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Poll everywhere link]"
+    "[Take this poll when you're done](https://PollEv.com/clickable_images/inthQ5a2DyUySSL/web)\n",
+    "\n",
+    "**Poll Instructions**\n",
+    "* When your group has completed the exercise or the staff announces that time's up, pleaes take the poll.\n",
+    "* One click per group, please!\n",
+    "* The $x$-axis denotes *Completeness* and the $y$-axis denotes *Confidence*.\n",
+    "* Examples:\n",
+    "  * you completely finished the exercise and are confident that you did it correctly --- click in the upper right zone.\n",
+    "  * You didn't finish the exercise, but you're confident that you know how to do it correctly --- click in the upper left zone\n",
+    "  * You finished the exercise, but you're not confident in your solution --- click in the lower right zone\n",
+    "  * You didn't finish the exercise and aren't sure how to proceed --- click in the lower left zone\n",
+    "* **Note:** Do not click near the boundaries of a zone.  Your response won't register."
    ]
   },
   {
@@ -1428,7 +1479,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Poll everywhere link]"
+    "[Take this poll when you're done](https://PollEv.com/clickable_images/inthQ5a2DyUySSL/web)\n",
+    "\n",
+    "**Poll Instructions**\n",
+    "* When your group has completed the exercise or the staff announces that time's up, pleaes take the poll.\n",
+    "* One click per group, please!\n",
+    "* The $x$-axis denotes *Completeness* and the $y$-axis denotes *Confidence*.\n",
+    "* Examples:\n",
+    "  * you completely finished the exercise and are confident that you did it correctly --- click in the upper right zone.\n",
+    "  * You didn't finish the exercise, but you're confident that you know how to do it correctly --- click in the upper left zone\n",
+    "  * You finished the exercise, but you're not confident in your solution --- click in the lower right zone\n",
+    "  * You didn't finish the exercise and aren't sure how to proceed --- click in the lower left zone\n",
+    "* **Note:** Do not click near the boundaries of a zone.  Your response won't register.ere link]"
    ]
   },
   {
@@ -1474,7 +1536,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Poll everywhere link]"
+    "[Take this poll when you're done](https://PollEv.com/clickable_images/inthQ5a2DyUySSL/web)\n",
+    "\n",
+    "**Poll Instructions**\n",
+    "* When your group has completed the exercise or the staff announces that time's up, pleaes take the poll.\n",
+    "* One click per group, please!\n",
+    "* The $x$-axis denotes *Completeness* and the $y$-axis denotes *Confidence*.\n",
+    "* Examples:\n",
+    "  * you completely finished the exercise and are confident that you did it correctly --- click in the upper right zone.\n",
+    "  * You didn't finish the exercise, but you're confident that you know how to do it correctly --- click in the upper left zone\n",
+    "  * You finished the exercise, but you're not confident in your solution --- click in the lower right zone\n",
+    "  * You didn't finish the exercise and aren't sure how to proceed --- click in the lower left zone\n",
+    "* **Note:** Do not click near the boundaries of a zone.  Your response won't register."
    ]
   },
   {
@@ -1838,6 +1911,24 @@
    "outputs": [],
    "source": [
     "# your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Take this poll when you're done](https://PollEv.com/clickable_images/inthQ5a2DyUySSL/web)\n",
+    "\n",
+    "**Poll Instructions**\n",
+    "* When your group has completed the exercise or the staff announces that time's up, pleaes take the poll.\n",
+    "* One click per group, please!\n",
+    "* The $x$-axis denotes *Completeness* and the $y$-axis denotes *Confidence*.\n",
+    "* Examples:\n",
+    "  * you completely finished the exercise and are confident that you did it correctly --- click in the upper right zone.\n",
+    "  * You didn't finish the exercise, but you're confident that you know how to do it correctly --- click in the upper left zone\n",
+    "  * You finished the exercise, but you're not confident in your solution --- click in the lower right zone\n",
+    "  * You didn't finish the exercise and aren't sure how to proceed --- click in the lower left zone\n",
+    "* **Note:** Do not click near the boundaries of a zone.  Your response won't register."
    ]
   },
   {
