--- a/Homework/HW0/cs109a_hw0_final.ipynb
+++ b/Homework/HW0/cs109a_hw0_final.ipynb
@@ -146,56 +146,8 @@
     "\n",
     "(i) What is the conditional distribution of $X|Y$ (it is a well-known family)?\n",
     "\n",
-    "(ii) Find the mean and variance of the marginal distribution of $X$. \n"
+    "(ii) Find the mean and variance of the marginal distribution of $X$. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "h1 { \n",
-       "    padding-top: 25px;\n",
-       "    padding-bottom: 25px;\n",
-       "    text-align: left; \n",
-       "    padding-left: 10px;\n",
-       "    background-color: #DDDDDD; \n",
-       "    color: black;\n",
-       "}\n",
-       "p.q1 { \n",
-       "    padding-top: 5px;\n",
-       "    padding-bottom: 5px;\n",
-       "    text-align: left; \n",
-       "    padding-left: 5px;\n",
-       "    background-color: #EEEEEE; \n",
-       "    color: black;\n",
-       "}\n",
-       "header {\n",
-       "   padding-top: 35px;\n",
-       "    padding-bottom: 35px;\n",
-       "    text-align: left; \n",
-       "    padding-left: 10px;\n",
-       "    background-color: #DDDDDD; \n",
-       "    color: black;\n",
-       "}\n",
-       "\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1032,7 +984,6 @@
    "execution_count": 5,
    "metadata": {
     "button": false,
-    "collapsed": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1073,7 +1024,6 @@
    "execution_count": 6,
    "metadata": {
     "button": false,
-    "collapsed": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1101,7 +1051,6 @@
    "execution_count": 7,
    "metadata": {
     "button": false,
-    "collapsed": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1144,7 +1093,6 @@
    "execution_count": 8,
    "metadata": {
     "button": false,
-    "collapsed": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1431,9 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1505,7 +1451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
