--- a/Labs/Lab2/Lab2.ipynb
+++ b/Labs/Lab2/Lab2.ipynb
@@ -794,7 +794,7 @@
     "\n",
     "You are given the code for the first two functions.  Notice that $z$ is passed in as a `numpy` array and that the functions are returned as `numpy` arrays.  Parameters are passed in as floats.\n",
     "\n",
-    "You should write a function to compute the rectified linear unit.  The input should be a `numpy` array for $z$ and a positive float for $\\epsilon$.  The next cell provides functions to compute the logistic and hyperbolic tangent functions.  You might want to use these as examples."
+    "You should write a function to compute the rectified linear unit.  The input should be a `numpy` array for $z$ and a positive float for $\\epsilon$."
    ]
   },
   {
@@ -855,7 +855,7 @@
    "source": [
     "x = np.linspace(-5.0, 5.0, 100) # Equally spaced grid of 100 pts between -5 and 5\n",
     "\n",
-    "f = logistic(x, -1.0, 1.0) # Generate data"
+    "f = logistic(x, 1.0, 1.0) # Generate data"
    ]
   },
   {
@@ -1093,7 +1093,6 @@
     "* Make a figure with the logistic function, hyperbolic tangent, and rectified linear unit.\n",
     "* Use different line styles for each plot\n",
     "* Put a legend on your figure\n",
-    "* Save your figure\n",
     "\n",
     "Here's an example of a figure:\n",
     "![](nice_plots.png)\n",
@@ -1143,9 +1142,9 @@
     "plt.rcParams.update(config.pars) # Update rcParams to make nice plots\n",
     "\n",
     "# First get the data\n",
-    "f1 = logistic(x, -1.0, 1.0)\n",
-    "f2 = logistic(x, -2.0, 1.0)\n",
-    "f3 = logistic(x, -3.0, 1.0)\n",
+    "f1 = logistic(x, 1.0, 1.0)\n",
+    "f2 = logistic(x, 2.0, 1.0)\n",
+    "f3 = logistic(x, 3.0, 1.0)\n",
     "\n",
     "fig, ax = plt.subplots(1,1, figsize=(10,6)) # Create figure object\n",
     "\n",
@@ -1197,15 +1196,6 @@
     "  in your `config.py` file.\n",
     "* Make sure your `config.py` file is in the same directory as your lab notebook.\n",
     "* Make a plot (similar to the one I made above) using your `config` file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
    ]
   },
   {
@@ -1302,114 +1292,9 @@
     "\n",
     "From the re-aranged second equation we can see that the best-fit line  passes through $(\\bar{x},\\bar{y})$, the center of mass of the data\n",
     "\n",
-    "From any of the first equations, we can see that the slope of the line has to do with whether or not an x value that is above/below the center of mass is typically paired with a y value that is likewise above/below, or typically paired with one that is opposite."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Matrices and Math\n",
-    "Okay, but where did these equations come from?\n",
+    "From any of the first equations, we can see that the slope of the line has to do with whether or not an x value that is above/below the center of mass is typically paired with a y value that is likewise above/below, or typically paired with one that is opposite.\n",
     "\n",
-    "We won't do a full derivation here, but the logic goes like this:\n",
-    "1. We want to pick $\\beta_0$ and $\\beta_1$ so as to minimize the squared error. So, we need to write the squared error in terms of $\\beta_0$ and $\\beta_1$. It happens to be $$ error = \\sum(true - predicted)^2 = \\sum_{i=1}^n\\left(y_i - (\\beta_0 + \\beta_1x_i)^2\\right)$$\n",
-    "2. This is a formula we want to minimize, so we apply calculus. The derivative with respect to $beta_1$ needs to be 0, as does the derivative with respect to $beta_0$.\n",
-    "3. Taking the derivatives and solving, we find the formulae above.\n",
-    "\n",
-    "If we follow the above process using matrices instead of vectors, (after a ton of ugly algebra) we arrive at a final set of equations (the ones you'll implement on your homework)\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\beta = (X^T X)^{-1} X^T Y.\n",
-    "\\end{align}\n",
-    "\n",
-    "Here, $X$ is a full dataset (one row per observation, one column per predictor), and $Y$ is still a column vector holding the response variable values. $\\beta$ is a vector of coeficients, one per feature.\n",
-    "\n",
-    "#### Working with data matrices\n",
-    "How do we write our data and equations in terms of matrices in the first place? Suspending reality, suppose there is a line $\\beta_0 + \\beta_1 x = y$ that **does** pass through all three observations.  Then we'd solve\n",
-    "\n",
-    "\\begin{align*}\n",
-    "  \\beta_0 + \\beta_1 = 2 \\\\\n",
-    "  \\beta_0 + 2 \\beta_1 = 2 \\\\\n",
-    "  \\beta_0 + 3 \\beta_1 = 4\n",
-    "\\end{align*}\n",
-    "\n",
-    "\n",
-    "for  $\\beta_0$ and  $\\beta_1$ where $\\beta_{0}$ and $\\beta_{1}$ are the intercept and slope of the desired line, respectively.  Let's write these equations in matrix form.  The left hand sides of the above equations can be written as\n",
-    "<img src=\"images/LHS.png\" alt=\"Drawing\" style=\"width: 450px;\"/>\n",
-    "\n",
-    "while the right hand side is simply the vector\n",
-    "\n",
-    "\\begin{align*}\n",
-    "  Y = \n",
-    "  \\begin{bmatrix}\n",
-    "    2 \\\\\n",
-    "    2 \\\\\n",
-    "    4 \n",
-    "  \\end{bmatrix}.\n",
-    "\\end{align*}\n",
-    "\n",
-    "Thus we have the matrix equation $X \\beta = Y$ where\n",
-    "\n",
-    "\\begin{align}\n",
-    "  X = \n",
-    "  \\begin{bmatrix}\n",
-    "    1 & 1\\\\\n",
-    "    1 & 2\\\\\n",
-    "    1 & 3\n",
-    "  \\end{bmatrix}, \n",
-    "  \\quad\n",
-    "  \\beta = \n",
-    "  \\begin{pmatrix}\n",
-    "    \\beta_0 \\\\\n",
-    "    \\beta_1 \n",
-    "  \\end{pmatrix}, \n",
-    "  \\quad \\mathrm{and} \\quad \n",
-    "  Y = \n",
-    "  \\begin{bmatrix}\n",
-    "    2 \\\\\n",
-    "    2 \\\\\n",
-    "    4 \n",
-    "  \\end{bmatrix}.\n",
-    "\\end{align}\n",
-    "\n",
-    "**This is a very important data format that we'll use throught the lab and the course**. Notice the dimensions of X and Y. Which dimension is observations, and which is features?\n",
-    "\n",
-    "\n",
-    "However, becuase the data are not colinear, this equation doesn't have a perfect solution. To find the best possible solution we follow the process above, writing our error in terms of the betas: $error = \\sum (true - predicted)^2 = \n",
-    "\\sum (Y - \\beta X)^2 = (Y - \\beta X)(Y - \\beta X)^T$. Then we take (matrix) derivatives and solve. We'll skip te ugly algebra.\n",
-    "\n",
-    "Ultimately, we get to this equation, named \"the normal equation\":\n",
-    "\n",
-    "\\begin{align}\n",
-    "  X^T X \\beta = X^T Y.\n",
-    "\\end{align}\n",
-    "\n",
-    "If $X^T X$ is invertible then the solution is\n",
-    "\n",
-    "\\begin{align}\n",
-    "  \\beta = (X^T X)^{-1} X^T Y.\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"exercise\"><b>Exercise</b></div>\n",
-    "Suppose the toy problem that we just considered included a second predictor variable, $\\beta_2$.\n",
-    "\n",
-    "* How would $X, \\beta$, and $Y$ change, if at all? What would the dimensions of each array be?\n",
-    "* Would anything else change?\n",
-    "\n",
-    "Create a new markdown cell below and explain. Practice using LATEX and the $ flag to format your mathematics."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Your answer here"
+    "Right now, the derivation of $\\beta_{0}$ and $\\beta_{1}$ is a mystery.  Don't worry about this!  You will see where they come from in lecture next week.  In this lab, you will simply implement the simple formulas for $\\beta_{0}$ and $\\beta_{1}$."
    ]
   },
   {
@@ -2120,24 +2005,6 @@
    "outputs": [],
    "source": [
     "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Concept Check Answers:\n",
-    "Answer these questions and see the bottom of the lab to check your answers.\n",
-    "\n",
-    "1. What is the major benefit of working in numpy?\n",
-    "    - Numpy is much faster at mathematical operations than base python is.\n",
-    "2. Why is it vital to use built-in numpy functions whenever possible?\n",
-    "    - DIY activities in numpy occur at the Python level, rather than at the C level. They are categorically slower than using built-in functions.\n",
-    "3. You need to find the running total of each element in a numpy array. For example, the input \\[2,5,3,2\\] should give the output \\[2,7,10,12\\]. Rather than writing your own code, think of at least two google querrys to find a relevant numpy function.\n",
-    "    - Example 1: numpy sum array\n",
-    "    - Example 2: numpy running sum\n",
-    "4. What numpy function does the job above?\n",
-    "    - the `cumsum` function"
    ]
   }
  ],
